--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,19 @@
 <body>
 
 <h1>SAMUEL L. IPSUM</h1>
-<h2>Motherfucking placeholder text motherfucker!</h2>
+<h2>Motherf*cking placeholder text motherf*cker!</h2>
 
 <p>
-    Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin'?
+    Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherf*ckin' house, f*ckin' up the way the n*gger talks. Motherf*cker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherf*cker, know what I'm sayin'?
 </p>
 <p>
     Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.
 </p>
 <p>
-    Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.
+    Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that sh*t.
 </p>
 <p>
-    Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
+    Normally, both your asses would be dead as f*cking fried chicken, but you happen to pull this sh*t while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
 </p>
 <p>
     The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
