Add generated commit messages

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
             <a href="https://stackoverflow.com/questions/35979642/what-is-git-tag-how-to-create-tags-how-to-checkout-git-remote-tags/35979751#35979751">
                 https://stackoverflow.com/questions/35979642/what-is-git-tag-how-to-create-tags-how-to-checkout-git-remote-tags/35979751#35979751
             </a>
+            <a href="https://github.com/ngerakines/commitment">
+                https://github.com/ngerakines/commitment
+            </a>
         </div>
     </footer>
 </article>
