Clean up sources

--- a/src/index.html
+++ b/src/index.html
@@ -29,11 +29,20 @@
 
     <footer>
         <div class="sources">
-            <a href="https://stackoverflow.com/questions/35979642/what-is-git-tag-how-to-create-tags-how-to-checkout-git-remote-tags/35979751#35979751">
+            <a href="https://www.toptal.com/software/trunk-based-development-git-flow" target="_blank">
+                https://www.toptal.com/software/trunk-based-development-git-flow
+            </a>
+            <a href="https://nelis.boucke.be/post/trunk-based-development/" target="_blank">
+                https://nelis.boucke.be/post/trunk-based-development/
+            </a>
+            <a href="https://dzone.com/articles/shades-trunk-based-development" target="_blank">
+                https://dzone.com/articles/shades-trunk-based-development
+            </a>
+            <a href="https://stackoverflow.com/questions/35979642/what-is-git-tag-how-to-create-tags-how-to-checkout-git-remote-tags/35979751#35979751" target="_blank">
                 https://stackoverflow.com/questions/35979642/what-is-git-tag-how-to-create-tags-how-to-checkout-git-remote-tags/35979751#35979751
             </a>
-            <a href="https://github.com/ngerakines/commitment">
-                https://github.com/ngerakines/commitment
+            <a href="http://whatthecommit.com/" target="_blank">
+                http://whatthecommit.com/
             </a>
         </div>
     </footer>
